unpackaged/objects/TradingPoint__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CashRegisters__c</fullName>
        <label>Cash Registers</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PhoneNumber__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <label>Trading Point</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Trading Point Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trading Points</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>